--- a/pages/Novedades.html
+++ b/pages/Novedades.html
@@ -9,6 +9,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
   <link rel="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
   <title>ASHIKA</title>
 </head>
 
@@ -27,7 +28,7 @@
               <a class="nav-link active" aria-current="page" href="../index.html">INICIO</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./productos.html">PRODUCTOS</a>
+              <a class="nav-link" href="./Producto.html">PRODUCTOS</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -35,7 +36,7 @@
               </a>
               <ul class="dropdown-menu">
                 <li><a class="dropdown-item" href="./Preguntas.html">PREGUNTAS</a></li>
-                <li><a class="dropdown-item" href="./Contactos.html">CONTACTO</a></li>
+                <li><a class="dropdown-item" href="./Contacto.html">CONTACTO</a></li>
                 <li><a class="dropdown-item" href="./Novedades.html">NOVEDADES</a></li>
               </ul>
             </li>
@@ -74,9 +75,9 @@
   <!-- Pie de pagina -->
   <footer>
     <div>
-      <img src="../img/facebook.png" alt="facebook">
-      <img src="../img/instagram.png" alt="Instagram">
-      <img src="../img/twitter.png" alt="Twitter">
+      <img class="animate__animated animate__backInLeft" src="../img/facebook.png" alt="facebook">
+      <img class="animate__animated animate__backInUp" src="../img/instagram.png" alt="Instagram">
+      <img class="animate__animated animate__backInRight" src="../img/twitter.png" alt="Twitter">
     </div>
 
   </footer>
